Update README.md
Simplified the process to run BlueBot on a headless device